# when3meet_cli

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: general.yml
src/: lib.rs  main.rs
src/cli/: args.rs
src/fetch_availability/: errors.rs  mod.rs  model.rs  parse.rs
src/optimal/: algo.rs  mod.rs
src/output/: mod.rs  write.rs
