[package]
name = "when3meet"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "when3meet"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", features = [
    "fetch",
] }
url = "2.4"
chrono = { version = "0.4.29", default-features = false, features = ["clock"] }
chrono-tz = "0.8.3"
iana-time-zone = "0.1.57"
anyhow = "1.0.75"

[dev-dependencies]
claims = "0.7.0"
