[package]
name = "when3meet"
version = "0.1.3"
edition = "2021"
authors = ["Garrett Ladley <garrett.ladley14@gmail.com>"]
license = "GPL-3.0-only"
description = "CLI tool to find the optimal time to meet given a when2meet URL"
readme = "README.md"
homepage = "https://github.com/garrettladley/when3meet"
repository = "https://github.com/garrettladley/when3meet"
keywords = ["cli", "when2meet", "when3meet"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "when3meet"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
headless_chrome = { version = "1.0.5", features = ["fetch"] }
url = "2.4"
chrono = { version = "0.4.29", default-features = false, features = ["clock"] }
chrono-tz = "0.8.3"
iana-time-zone = "0.1.57"
anyhow = "1.0.75"
thiserror = "1.0.48"

[dev-dependencies]
claims = "0.7.0"
